# LLM-Evaluation-Harness-LLM-as-Judge

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: calibration.json
src/llm_eval/: __init__.py  config.py  contracts.py
src/llm_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/llm_eval/api/: __init__.py  main.py
src/llm_eval/api/static/: app.js  index.html  styles.css
src/llm_eval/batch/: __init__.py  evaluator.py
src/llm_eval/judge/: __init__.py  bias.py  executor.py
src/llm_eval/metrics/: __init__.py  cohen_kappa.py  cost_tracking.py
src/llm_eval/rubrics/: __init__.py  definitions.py  prompt.py
src/llm_eval/storage/: __init__.py  sqlite.py
tests/: __init__.py  conftest.py  test_api.py  test_batch.py  test_judge.py  test_rubrics.py  test_storage.py
